# android-native-egl-example

./: .gitignore  .gitmodules  build.gradle  local.properties
gradle/wrapper/: gradle-wrapper.properties
src/main/jni/: CMakeLists.txt  renderer.cpp  renderer.h
